# userful-mcps

./: .gitignore  LICENSE  README.md  docx_replace_mcp.py  pyproject.toml  ytdlp_mcp.py
docx_replace/: pyproject.toml
docx_replace/src/docx_replace_mcp/: __init__.py  docx_replace_mcp.py
mermaid/: mermaid_mcp.py  pyproject.toml
mermaid/tests/: mermaid_mcp_test.py
plantuml/: .gitignore  pyproject.toml  spec.1.md  spec.2.md  spec.3.md  spec.4.md  test.puml
plantuml/src/plantuml_renderer/: main.py
plantuml/src/plantuml_server/: main.py
plantuml/src/services/: docker_service.py  plantuml_service.py
rss2md/: pyproject.toml
rss2md/src/rss2md/: main.py
rss2md/tests/: rss2md_test.py
tests/: mermaid_mcp_test.py
ytdlp/: pyproject.toml  ytdlp_mcp.py
ytdlp/src/ytdlp_mcp/: __init__.py
ytdlp/tests/: ytdlp_mcp_test.py
