[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-template-mcp-server"
version = "0.1.0"
description = "MCP server for DOCX template processing and PDF conversion"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "python-docx",
    "python-docx-replace",
    "mcp",
    "docx2pdf",
    "docx>=0.2.4",
    "yt-dlp>=2025.2.19",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
