
[project]
name = "docx-template-mcp-server"
version = "0.1.0"
description = "MCP server for DOCX template processing and PDF conversion"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "python-docx",
  "python-docx-replace",
  "mcp",
  "docx2pdf",
  "docx>=0.2.4",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]


[project.scripts]
docx_replace = "docx_replace_mcp:main"
