
[project]
name = "mermaidchart-render-server"
version = "0.1.0"
description = "MCP server for Rendering mermaid using Mermaidchart.com"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["mcp", "requests>=2.32.3"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]


[project.scripts]
mermaid_mcp = "mermaid_mcp:main"
